--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor2 | Product preview card component</title>
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fraunces">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
 
@@ -42,14 +44,12 @@ main {
   
 }
 
-.picture{
-  flex: 1;
-}
 
 img {
-  width: 250px;
+  height: 400px;
   object-fit: cover;
   border-radius: 20px 0 0 20px;
+  flex: 1;
 }
 
 .text {
@@ -57,25 +57,50 @@ img {
   background-color: white;
   border-radius: 0 20px 20px 0;
   padding: 20px;
+
 }
 
 .newPrice{
-  color: green;
+  color: hsl(158, 36%, 37%);
   font-weight: 700;
-  font-size: 30px;
+  font-size: 25px;
   vertical-align: middle;
+  font-family: Fraunces;
 }
 .oldPrice{
   vertical-align: middle;
+  font-family: Fraunces;
+  color: hsl(228, 12%, 48%);
 }
 
 btn {
   border-radius: 10px;
-  
+  font-family: Montserrat;
+  font-weight: 700;
   background-color: green;
-  padding: 5px;
+  padding: 5px 20px 5px 20px;
+  text-align: center;
+  color: white;
+}
 
-  margin-top: 20px;
+p {
+  font-size: 14px;
+  font-family: Montserrat;
+  font-weight: 500;
+  color: hsl(228, 12%, 48%);
+}
+
+.upper{
+  text-transform: uppercase;
+}
+
+h1{
+  font-family: Fraunces;
+  font-weight: 700px;
+}
+
+.prices {
+  margin-bottom: 10px;
 }
 </style>
 </head>
@@ -85,7 +110,8 @@ btn {
     <img src = "images/image-product-desktop.jpg">
   </div>
   <div class="text">
-    <div class="description">Preview
+    <div class="description">
+    <p class="upper">Preview</p>
 
     <h1>Gabrielle Essence Eau De Parfum</h1>
   
@@ -95,7 +121,7 @@ btn {
     <div class="prices">
     <span class="newPrice"> $149.99 </span><span class="oldPrice"> $169.99 </span>
     </div>
-    <btn>Add to Cart</btn>
+    <btn><i class='fa fa-shopping-cart'></i> Add to Cart</btn>
     
   </div>
 
