--- a/index.html
+++ b/index.html
@@ -16,14 +16,20 @@
 
 body {
   background-color: hsl(30, 38%, 92%);
+  /* Thanks Frontend mentor Advice */
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  /* Thanks Frontend mentor Advice */
 }
 
-
 main {
+  /* Thanks Frontend mentor Advice 
   position:absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  */
   width: 40%;
   min-width: 800px;
   display: flex;
