--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ main {
   top: 50%;
   transform: translate(-50%, -50%);
   */
-  width: 40%;
+  width: 900px;
   min-width: 800px;
   display: flex;
   border-radius: 20px;
