--- a/index.html
+++ b/index.html
@@ -16,35 +16,30 @@
 
 body {
   background-color: hsl(30, 38%, 92%);
-  /* Thanks Frontend mentor Advice */
   min-height: 100vh;
   display: grid;
   place-items: center;
-  /* Thanks Frontend mentor Advice */
 }
 
 main {
-  /* Thanks Frontend mentor Advice 
-  position:absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  */
-  width: 900px;
-  min-width: 800px;
+  width: 60%;
   display: flex;
   border-radius: 20px;
   overflow: hidden;
 }
 
+.image-container {
+  width: 50%;
+}
+
 img {
-  flex: 1;
-  max-height: 400px;
+  width: 100%;
+  height: !00%;
   object-fit: cover;
 }
 
 .text {
-  flex: 1;
+  width: 50%;
   background-color: white;
   padding: 10px 20px 10px 20px;
 }
@@ -108,18 +103,23 @@ h1{
   margin-bottom: 2rem;
 }
 
-@media screen and (max-width: 375px) {
-  main {
+@media screen and (max-width: 480px) {
+
+main {
+  width: 90%;
+  min-width: 350px;
   display: block;
   border-radius: 5px;
   overflow: hidden;
 }
+
 img {
   width: 100%;
   max-height: 300px;
   display: block;
   object-fit: cover;
 }
+
 
 .text {
   background-color: white;
@@ -192,9 +192,9 @@ btn:hover {
 </head>
 <body>
   <main>
-    
+    <div class="image-container">
     <img src = "images/image-product-desktop.jpg">
-  
+    </div>
     <div class="text">
       <div>
         <p class="upper">Preview</p>
