--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <title>Product preview card component</title>
     </head>
     <body>
-        <main>
+        <article>
             <div class="product">
             <div class="image">
                 <img src="images/image-product-desktop.jpg" alt="product image">
             </div>
             <div class="description">
-                <h2>Preview</h2>
+                <p class="breadCr">Preview</p>
                 <h1>Gabrielle Essence Eau De Parfum</h1> 
                 
                 <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
@@ -25,7 +25,7 @@
                 
             </div>
             </div>
-        </main>
+        </article>
     </body>
 </html>
 
